# myshaping

./: README.md  pyproject.toml  test.py  test2.py
myshaping/: __init__.py  check_shape_plugin.py  function_helper.py  registry.py  tensor_method_hooks.py  torch_function_hooks.py  type_translator.py
myshaping/stubs/jaxtyping/: __init__.pyi  _array_types.pyi  _config.pyi  _decorator.pyi  _errors.pyi  _import_hook.pyi  _ipython_extension.pyi  _pytest_plugin.pyi  _pytree_type.pyi  _storage.pyi
myshaping/stubs/jaxtyping/_typeguard/: __init__.pyi
myshaping/stubs/torch/: __init__.pyi
tests/: test_mypy_plugin.yml
