[project]
name = "myshaping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yosshi999", email = "Yosshi999@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.3.2",
    "mypy==1.16.0",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
plugins = ["myshaping/check_shape_plugin.py"]
mypy_path = "myshaping/stubs"
disable_error_code = ["attr-defined"]
