[project]
name = "myshaping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yosshi999", email = "Yosshi999@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "jaxtyping>=0.3.2",
    "mypy==1.16.0",
    "mypy-extensions>=1.1.0",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "wadler-lindig>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
plugins = ["myshaping.check_shape_plugin"]
mypy_path = "myshaping/stubs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--mypy-pyproject-toml-file=pyproject.toml"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mypy-plugins>=3.2.0",
]
